Cambios en todos los archivos principales

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <title>Document  3333333</title>
 </head>
 <body>
-    <h1>Mi pagina web HTML 2</h1>
+    <h1>PAGINA INICIO</h1>
+    <h2>PAGINA INICIO</h2>
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="pagina1.html">Pagina 1</a></li>
+        <li><a href="contacto.html">contacto</a></li>
     </ul>
     <p>Hola mundo 2 este es mi curso de GIT</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas optio, necessitatibus fuga aspernatur quasi consequuntur nihil totam assumenda nemo facere reprehenderit? Incidunt nemo veniam, saepe vero nisi dolorem nesciunt. Odit?</p>
 </body>
 </html>
