--- a/contacto.html
+++ b/contacto.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <h1>Contacto</h1>
+    <h2>Contacto</h2>
     <ul>
-        <li><a href="index.html">pagina de contacto</a></li>
-        <li><a href="pagina1.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="pagina1.html">Pagina 1</a></li>
+        <li><a href="contacto.html">contacto</a></li>
     </ul>
     <p>Pagina 1 2 este es mi curso de GIT</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas optio, necessitatibus fuga aspernatur quasi consequuntur nihil totam assumenda nemo facere reprehenderit? Incidunt nemo veniam, saepe vero nisi dolorem nesciunt. Odit?</p>
 </body>
 </html>
