--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document  3333333</title>
 </head>
+<style>    body{        background-color: black; color: lime;    } </style>
 <body>
     <h1>PAGINA INICIO</h1>
     <h2>PAGINA INICIO</h2>
