--- a/pagina1.html
+++ b/pagina1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document 33dfsgdsfgsdfgdfsg</title>
 </head>
+<style>    body{        background-color: black;  color: lime;   } </style>
 <body>
     <h1>PAGINA 1</h1>
     <h2>PAGINA 1</h2>
